@@ -12,6 +12,7 @@ Revision history for Lufi
 	- Mitigate genRandomKey exception risk
 	- Add report file link in the navbar
 	- Allow to choose your language
+	- Use a recurrent task to provision shorts
 
 0.02.2 2017-09-18
 	- Fix cron tasks bug
